@@ -16,6 +16,9 @@ The Grinder 3.0-beta34 (Not yet released)
   Update the cookie.py example to show how to send a cookie. Thanks to
   "tz" for prompting me to do this.
 
+  Fix bug 1825639 - "Connection ... already opened" when recording HTTPS.
+  Thanks to Peter Zadrozny and Brian Dols for the report.
+
 
 The Grinder 3.0-beta33
 ----------------------
